# rules_closure

./: .bazelrc  .travis.yml  CONTRIBUTORS  README.md  WORKSPACE
.github/: CODEOWNERS
.github/workflows/: main.yml
closure/: BUILD  defs.bzl  filegroup_external.bzl  patch_protobuf.patch  repositories.bzl
closure/compiler/: BUILD  closure_base_js_library.bzl  closure_compiler.BUILD  closure_js_aspect.bzl  closure_js_binary.bzl  closure_js_deps.bzl  closure_js_library.bzl
closure/linter/: closure_js_lint_test.bzl  closure_linter.BUILD  python_gflags.BUILD
closure/private/: BUILD  deb_extract.bzl  defs.bzl  file_test.bzl  files_equal_test.bzl  gensrcjar.sh  java_import_external.bzl  java_proto_library.bzl  lines_sorted_test.bzl  platform_http_file.bzl  protoc_repo.bzl  rule_test.bzl  test_rules.bzl  unusable_type.js
closure/protobuf/: BUILD  closure_js_proto_library.bzl  closure_proto_library.bzl  protobuf_js.BUILD
closure/stylesheets/: BUILD  closure_css_binary.bzl  closure_css_library.bzl
closure/templates/: BUILD  closure_java_template_library.bzl  closure_js_template_library.bzl  closure_template_java_library.bzl  closure_template_js_library.bzl  soy_jssrc.BUILD  (+2 more)
gazelle/: BUILD
gazelle/closure_js/: BUILD.bazel  config.go  config_test.go  fileinfo.go  fileinfo_test.go  fix.go  generate.go  integration_test.go  kinds.go  lang.go  resolve.go  resolve_test.go
gazelle/closure_js/closure_library/: BUILD  closure_library.go  regenerate.py
protobuf/: BUILD  closure_proto_js_library.bzl  protobuf_js.BUILD
protobuf_js/: deps.bzl  protobuf_js_repo.bzl
(+139 files in other folders)
