load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "fileinfo.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/bazelbuild/rules_closure/gazelle/closure_js",
    visibility = ["//visibility:public"],
    deps = [
        "//gazelle/closure_js/closure_library",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_js",
    languages = DEFAULT_LANGUAGES + [
        ":go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "config_test.go",
        "fileinfo_test.go",
        "integration_test.go",
        "resolve_test.go",
    ],
    args = ["-gazelle=$(location :gazelle_js)"],
    data = [
        ":gazelle_js",
    ],
    embed = [":go_default_library"],
    rundir = ".",
    deps = ["@bazel_gazelle//testtools:go_default_library"],
)
